fix issues de calidad de codigo + uso de google sheets para precios

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,19 @@ VITE_GOOGLE_ANALYTICS_ID=
 VITE_META_PIXEL_ID=
 
 # ===================================
+# GOOGLE SHEETS - GESTIÓN DE PRECIOS (Frontend - Seguro)
+# ===================================
+# ID de la Google Sheet pública (solo lectura)
+# Obtener desde la URL: https://docs.google.com/spreadsheets/d/{SHEET_ID}/edit
+VITE_GOOGLE_SHEETS_ID=https://docs.google.com/spreadsheets/d/1d0gfS-LT85tngBtqVPw9Pd4QkPEVbAa0IZBHNJOLDIk/edit?usp=sharing
+
+# GID de la pestaña específica (usualmente 0 para la primera pestaña)
+VITE_GOOGLE_SHEETS_GID=0
+
+# Duración del caché de precios en minutos (default: 30)
+VITE_PRICE_CACHE_DURATION=30
+
+# ===================================
 # APIs SENSIBLES (Backend Only - Comentadas por seguridad)
 # ===================================
 # Solo descomentá y usá estas variables si tenés un backend
