--- a/.env.example
+++ b/.env.example
@@ -36,7 +36,7 @@ VITE_META_PIXEL_ID=
 # ===================================
 # ID de la Google Sheet pública (solo lectura)
 # Obtener desde la URL: https://docs.google.com/spreadsheets/d/{SHEET_ID}/edit
-VITE_GOOGLE_SHEETS_ID=https://docs.google.com/spreadsheets/d/1d0gfS-LT85tngBtqVPw9Pd4QkPEVbAa0IZBHNJOLDIk/edit?usp=sharing
+VITE_GOOGLE_SHEETS_ID=1d0gfS-LT85tngBtqVPw9Pd4QkPEVbAa0IZBHNJOLDIk
 
 # GID de la pestaña específica (usualmente 0 para la primera pestaña)
 VITE_GOOGLE_SHEETS_GID=0
